# excanim

./: .gitignore  README.md  pyproject.toml
bridge/: bundle-entry.js  export.mjs  package.json  rasterize.mjs
examples/: arch.py  bounce.py  bounce_sim.py  matmul.py
examples/arch/: arch.py
examples/bounce/: bounce.py
examples/bounce_sim/: bounce_sim.py
examples/matmul/: matmul.py
src/excanim/: __init__.py  constants.py  scene.py  timeline.py
src/excanim/anim/: __init__.py  base.py  create.py  easing.py  fade.py  transform.py
src/excanim/bridge/: index.html
src/excanim/elements/: __init__.py  base.py  group.py  lines.py  shapes.py  text.py
src/excanim/render/: bridge.py  frames.py  video.py
